crates/ars-collections/tests/ui/tab_key_discriminant_missing.rs
use ars_collections::TabKey;

#[derive(TabKey)]
#[tab_key(discriminant)]
enum SettingsTab {
    Profile = 1,
    Billing,
}

fn main() {}
